Update ParamFilterUtils.java